# Aperiodic-reliance-physiological-deep-learning

./: .gitignore  README.md  pyproject.toml
code/: .gitignore  README.md  pyproject.toml  requirements.txt
code/configs/: sleep_edf_subset.yaml
code/scripts/: README.md  aggregate_eegmamba_sanity.py  aggregate_foundation_multiseed_predictions.py  aggregate_multiseed_subject_bootstrap.py  aggregate_ptbxl_prediction_bootstrap.py  analyze_linear_aperiodic_attribution.py  analyze_linear_logit_contributions.py  analyze_raw_intervention_diagnostics.py  analyze_specparam_diagnostics.py  audit_tuab_channels.py  bootstrap_intervention_metrics.py  collect_formal_hypothesis_tests.py  compare_specparam_irasa.py  download_physionet_mi.sh  download_ptbxl_bulk_zip.sh  download_ptbxl_records100.sh  download_ptbxl_records100_s3.sh  download_sleep_edf_all_sleep_cassette.sh  download_sleep_edf_subset.sh  download_tuab_full_resumable.sh  extract_physionet_mi_psd.py  extract_physionet_mi_raw_trials.py  extract_sleep_edf_psd.py  extract_sleep_edf_raw_epochs.py  extract_tuab_header_metadata.py  extract_tuab_psd.py  extract_tuab_raw_epochs.py  fit_physionet_mi_specparam.py  fit_sleep_edf_irasa.py  fit_sleep_edf_specparam.py  fit_tuab_specparam_full.py  fit_tuab_specparam_qc.py  generate_nmi_extended_data_figures.py  generate_nmi_journal_images.py  generate_nmi_supplementary_information.py  generate_nmi_update_assets.py  generate_nmi_update_figures_matplotlib.py  launch_physionet_mi_multiseed_neural.sh  launch_ptbxl_1f_demo.sh  launch_ptbxl_age_sex_matched_neural.sh  (+65 more)
docs/: DATA_ACCESS.md  (+11 more)
(+100 files in other folders)
