[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aperiodic-eeg"
version = "0.1.0"
description = "Aperiodic confound audit tools for EEG machine learning experiments."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

